--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
     <body background="img/img2.jpg">
     <h1 align="center" style="color: white; font-size: 80"><u>Великий крестовый поход</u></h1>
+    <p align="center" style="color: white; font-size: 45">На этом сайте вы кратко ознакомитесь с главными героями вселенной Вархаммера во время <b>Велкиого крестового похода.</b></p>
     <p align="center"><a href="index4.html" style="color: white; font-size: 45">Император</a></p>
     <p align="center"><a href="index3.html" style="color: white; font-size: 45">Примархи</a></p>
     <p align="center"><a href="index2.html" style="color: white; font-size: 45;">Легионы</a></p>
